--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "natural": "^6.8.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
